# kube-sentry-controller

./: BUILD  Gopkg.toml  LICENSE  Makefile  PROJECT  README.md  WORKSPACE  go.mod  go.sum  main.go  skaffold.yaml  tools.go
.github/workflows/: push.yaml
config/crds/: sentry.sr.github.com_clientkeys.yaml  sentry.sr.github.com_projects.yaml  sentry.sr.github.com_teams.yaml  sentry_v1alpha1_clientkey.yaml  sentry_v1alpha1_project.yaml  sentry_v1alpha1_team.yaml
config/dev/: deploy.yaml  env.txt.example  kustomization.yaml
config/rbac/: rbac_role.yaml
config/samples/: sentry.yaml
pkg/apis/: BUILD.bazel  addtoscheme_sentry_v1alpha1.go  apis.go
pkg/apis/sentry/: BUILD.bazel  group.go
pkg/apis/sentry/v1alpha1/: BUILD.bazel  clientkey_types.go  doc.go  project_types.go  register.go  team_types.go  zz_generated.deepcopy.go
pkg/controller/: BUILD.bazel  controller.go  reconciler.go  reconciler_test.go  sentry.go
pkg/sentry/: BUILD.bazel  client.go  fake.go
